# effectiveMobile

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/access_control/: apps.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  views.py
apps/access_control/management/commands/: seed_demo.py
apps/access_control/migrations/: 0001_initial.py
apps/authentication/: apps.py  authentication.py  models.py  schema.py  services.py
apps/authentication/migrations/: 0001_initial.py
apps/mock_business/: data.py  serializers.py  urls.py  views.py
apps/users/: models.py  profile_urls.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_unique_user_email_ci.py
config/: settings.py  urls.py
tests/: test_access_admin_api.py  test_access_models.py  test_access_service.py  test_auth_session_model.py  test_documentation.py  test_jwt_authentication.py  test_jwt_service.py  test_login.py  test_logout.py  test_mock_resources.py  test_password_service.py  test_profile.py  test_registration.py  test_seed_demo.py  test_soft_delete.py  test_user_model.py
