[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-rbac-backend"
version = "0.1.0"
description = "Backend with custom JWT authentication and role-based access control"
requires-python = ">=3.12,<3.15"
dependencies = [
  "Django>=6.0.6,<6.1",
  "djangorestframework>=3.17.1,<3.18",
  "psycopg[binary]>=3.3.4,<3.4",
  "bcrypt>=5.0.0,<6.0",
  "PyJWT>=2.13.0,<3.0",
  "django-environ>=0.13.0,<0.14",
  "drf-spectacular>=0.29.0,<0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-django>=4.12.0,<5.0",
  "ruff>=0.15.16,<0.16",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
